--- a/index.html
+++ b/index.html
@@ -56,6 +56,53 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 		padding: 0 !important;
 	}
 </style>
+<style>
+    /* --- Estilos para el Formulario de Masterbase --- */
+
+    #formulario {
+        background-color: #f8f9fa; /* Un color de fondo suave que usa la página */
+        padding: 60px 20px;
+        text-align: center;
+        border-top: 1px solid #e9e9e9;
+    }
+
+    #formulario h2 {
+        font-family: "Montserrat", sans-serif; /* La fuente de los títulos */
+        font-size: 2.5em;
+        color: #333;
+        margin-top: 0;
+        margin-bottom: 15px;
+    }
+
+    #formulario p {
+        font-family: "Lato", sans-serif; /* La fuente del cuerpo de texto */
+        font-size: 1.2em;
+        color: #666;
+        max-width: 600px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 30px;
+    }
+
+    .cta-button {
+        display: inline-block;
+        padding: 15px 35px;
+        font-family: "Lato", sans-serif;
+        font-size: 1.1em;
+        font-weight: 700;
+        color: #ffffff;
+        background-color: #0693e3; /* Un color azul vivo del tema original */
+        text-decoration: none;
+        border-radius: 5px;
+        transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+
+    .cta-button:hover {
+        background-color: #0578bd; /* Un tono de azul más oscuro para el hover */
+        transform: translateY(-2px);
+        color: #ffffff;
+    }
+</style>
 <style id='classic-theme-styles-inline-css' type='text/css'>
 /*! This file is auto-generated */
 .wp-block-button__link{color:#fff;background-color:#32373c;border-radius:9999px;box-shadow:none;text-decoration:none;padding:calc(.667em + 2px) calc(1.333em + 2px);font-size:1.125em}.wp-block-file__button{background:#32373c;color:#fff;text-decoration:none}
