--- a/index.html
+++ b/index.html
@@ -57,51 +57,63 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 	}
 </style>
 <style>
-    /* --- Estilos para el Formulario de Masterbase --- */
+ /* --- Estilos para el Formulario de Masterbase (Llamativo) --- */
 
-    #formulario {
-        background-color: #f8f9fa; /* Un color de fondo suave que usa la página */
-        padding: 60px 20px;
-        text-align: center;
-        border-top: 1px solid #e9e9e9;
-    }
+ #formulario.llamativo {
+  background-color: #0a5899; /* Un azul más intenso y moderno, similar a algunos elementos de la página */
+  color: #fff; /* Texto en color blanco para mayor contraste */
+  padding: 80px 20px; /* Más espacio para que respire la sección */
+  text-align: center;
+  /* Nuevo efecto visual sutil */
+  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.1) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.1) 75%, transparent 75%, transparent);
+  background-size: 20px 20px;
+ }
 
-    #formulario h2 {
-        font-family: "Montserrat", sans-serif; /* La fuente de los títulos */
-        font-size: 2.5em;
-        color: #333;
-        margin-top: 0;
-        margin-bottom: 15px;
-    }
+ .formulario-contenedor {
+  max-width: 700px;
+  margin: 0 auto;
+ }
 
-    #formulario p {
-        font-family: "Lato", sans-serif; /* La fuente del cuerpo de texto */
-        font-size: 1.2em;
-        color: #666;
-        max-width: 600px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 30px;
-    }
+ #formulario.llamativo h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 3em; /* Título más grande para impacto */
+  font-weight: 700;
+  margin-top: 0;
+  margin-bottom: 20px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Sombra para que destaque el texto */
+ }
 
-    .cta-button {
-        display: inline-block;
-        padding: 15px 35px;
-        font-family: "Lato", sans-serif;
-        font-size: 1.1em;
-        font-weight: 700;
-        color: #ffffff;
-        background-color: #0693e3; /* Un color azul vivo del tema original */
-        text-decoration: none;
-        border-radius: 5px;
-        transition: background-color 0.3s ease, transform 0.3s ease;
-    }
+ #formulario.llamativo p.subtitulo {
+  font-family: "Lato", sans-serif;
+  font-size: 1.5em; /* Subtítulo más grande y claro */
+  color: #f0f0f0;
+  margin-bottom: 40px;
+ }
 
-    .cta-button:hover {
-        background-color: #0578bd; /* Un tono de azul más oscuro para el hover */
-        transform: translateY(-2px);
-        color: #ffffff;
-    }
+ .boton-contenedor {
+  /* Centra el botón si no ocupa todo el ancho */
+ }
+
+ .formulario-boton {
+  display: inline-block;
+  padding: 18px 40px; /* Botón más grande */
+  font-family: "Lato", sans-serif;
+  font-size: 1.2em;
+  font-weight: 700;
+  color: #fff;
+  background-color: #ffc107; /* Un color amarillo/dorado brillante para destacar */
+  text-decoration: none;
+  border-radius: 8px; /* Bordes más redondeados */
+  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3); /* Sombra para que el botón parezca "saltar" */
+  transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+ }
+
+ .formulario-boton:hover {
+  background-color: #e0a800; /* Tono más oscuro al pasar el mouse */
+  transform: translateY(-3px); /* Ligero movimiento hacia arriba al pasar el mouse */
+  box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.4);
+  color: #fff;
+ }
 </style>
 <style id='classic-theme-styles-inline-css' type='text/css'>
 /*! This file is auto-generated */
@@ -1232,13 +1244,16 @@ var revapi1,
         </section>
         <!-- //Main Content -->
 
-              
-<section id="formulario">
-  <h2>Solicita tu Listado Personalizado</h2>
-  <p>Completa el formulario para recibir propiedades seleccionadas según tus preferencias.</p>
-  <a href="https://publicsmartview.mba.eu.masterbase.com/v1/682be41946cca4e4928dfcec" target="_blank" class="cta-button">
-    Ir al Formulario
-  </a>
+<section id="formulario" class="llamativo">
+ <div class="formulario-contenedor">
+  <h2>¿Buscas tu Propiedad Ideal en Santo Domingo?</h2>
+  <p class="subtitulo">¡Recibe listados personalizados directamente en tu correo!</p>
+  <div class="boton-contenedor">
+   <a href="https://publicsmartview.mba.eu.masterbase.com/v1/682be41946cca4e4928dfcec" target="_blank" class="cta-button formulario-boton">
+    ¡Quiero mi Listado Personalizado!
+   </a>
+  </div>
+ </div>
 </section>
 <section class="page-builder-two "><div class="container"></div><div class="clear"></div></section>...
         <!-- Footer Widgets --><div id="footer-widgets"><div class="dark-overlay"><div class="container">
