--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         font-weight: 700;
         margin-top: 0;
         margin-bottom: 15px;
-        text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); /* Sombra sutil para el texto */
+        text-shadow: 1px 1px 3px rgb(255, 255, 255); /* Sombra sutil para el texto */
     }
 
     #formulario .subtitulo {
@@ -102,7 +102,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         font-family: "Lato", sans-serif;
         font-size: 1.1em;
         font-weight: 700;
-        color: #333; /* Texto oscuro para contraste en botón claro */
+        color: #ffffff; /* Texto oscuro para contraste en botón claro */
         background-color: #fcb900; /* Color ámbar/dorado que está en la paleta del tema */
         text-decoration: none;
         border-radius: 5px;
@@ -1245,7 +1245,7 @@ var revapi1,
             
         </section>
         <!-- //Main Content -->
-
+<br>
 <section id="formulario" class="cta-formulario-personalizado">
   <div class="dark-overlay">
     <div class="container">
