--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
         font-size: 2.8em;
         font-weight: 700;
         margin-top: 0;
+		color: #ffffff;
         margin-bottom: 15px;
         text-shadow: 1px 1px 3px rgb(255, 255, 255); /* Sombra sutil para el texto */
     }
